--- a/02.Python_Basic.ipynb
+++ b/02.Python_Basic.ipynb
@@ -231,7 +231,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "제곱이나 거듭제곱은 ```**```를 이용한다. 다른 프로그램 언어에서는 제곱을 표현할 때 ```^```를 사용하는 경우가 많으므로, 혼돈하지 않도록 주의한다."
+    "제곱이나 거듭제곱은 ```**```를 이용한다. 다른 프로그램 언어에서는 제곱을 표현할 때 ```^```를 사용하는 경우가 많으므로, 혼동하지 않도록 주의한다."
    ]
   },
   {
@@ -802,7 +802,7 @@
     "cell_style": "center"
    },
    "source": [
-    "### multiple assignment\n",
+    "### Multiple assignment\n",
     "\n",
     "Python에서는 다음과 같이 여러 개의 변수에 여러 값들을 한 번에 지정할 수 있다.\n",
     "* 첫 라인에서는 ```x```에 2를, ```y```에 3을 대입하고,\n",
@@ -836,7 +836,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 주석(comment)\n",
+    "## 주석 (comment)\n",
     "\n",
     "* 주석은 코드를 실행시켰을 때, 실행되지 않는 부분을 말하며\n",
     "* 코드에 설명을 넣고 싶을 때 보통 이용한다.\n",
@@ -861,7 +861,7 @@
     "### 문자열 (string) 출력해 보기\n",
     "\n",
     "프로그래밍의 가장 기본 예제를 연습해 보자. Python은 인터프리터 언어로서 매우 간단하게 Hello world 프로그램을 작성할 수 있다.\n",
-    "* 이 때, ```print```라는 명령이 사용된다."
+    "* 이 때, ```print()```라는 명령이 사용된다."
    ]
   },
   {
@@ -1625,7 +1625,7 @@
     "\n",
     "-----------------------------------------\n",
     "\n",
-    "등호를 하나만 사용하는 경우 이를 대입연산자라 한다.\n",
+    "<p> <font color=#00008B> &#9635 대입연산 - 등호를 하나만 사용하는 경우, <code>=</code>, 이를 대입연산자라 한다. </font> </p>\n",
     "\n",
     "아래에서 ```x```라는 변수에 5라는 정수를 대입한다."
    ]
@@ -1643,7 +1643,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<font color='red'>  따라서 ```4=4```와 같은 문장은 잘못된 문장이다. </font>\n",
+    "<font color=#8B0000>  따라서 ```4=4```와 같은 문장은 잘못된 문장이다. </font>\n",
     "  * 숫자 4에 4를 대입할 수 없음."
    ]
   },
@@ -1669,7 +1669,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "등호를 두 개를 연속해서 사용하는 경우는 비교연산이라 한다.\n",
+    "<p> <font color=#00008B>  &#9635 비교연산 - 등호를 두 개를 연속해서 사용하는 경우, <code>==</code>, 비교연산이라 한다. </font> </p>\n",
     "\n",
     "아래 예제에서는 숫자 4와 숫자 4가 같은지 비교하고 있다. 당연히 같으므로 결과는 ```True```이다."
    ]
