--- a/03.Python_String.ipynb
+++ b/03.Python_String.ipynb
@@ -13,8 +13,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "tags": [],
-    "toc-hr-collapsed": true
+    "tags": []
    },
    "source": [
     "\n",
@@ -448,7 +447,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 연산자 오버로딩(overloading)\n",
+    "### 연산자 오버로딩 (overloading)\n",
+    "\n",
+    "<p> &#9635 연산자 오버로딩 - 같은 연산자가 적용되는 데이터 타입에 따라 다르게 작동하는 것 </p>\n",
     "\n",
     "* 더하기(+) 기호는 연산되는 변수의 타입에 따라 다르게 작동한다.\n",
     "  * ```3 + 4``` : 덧셈\n",
@@ -708,7 +709,10 @@
    "source": [
     "### 인덱스를 통한 특정 문자 접근\n",
     "\n",
-    "* 인덱스를 통하여 문자열의 특정 문자에 쉽게 접근\n",
+    "<p> <font color=#00008B> &#9635 인덱스 (index) </font> - 문자열이나 리스트 등에서 각 원소의 위치를 나타내는 숫자</p>\n",
+    "\n",
+    "\n",
+    "* 인덱스를 통하여 문자열의 특정 문자에 쉽게 접근할 수 있다.\n",
     "* 첫 번째 문자의 인덱스는 0부터 시작함 (1이 아님)\n"
    ]
   },
@@ -790,7 +794,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "인덱스의 값으로는 정수형 데이터를 입력해야 한다."
+    "<div class=\"alert alert-block alert-warning\">  \n",
+    "<b>주의:</b> 인덱스의 값으로는 정수형 데이터를 입력해야 한다.\n",
+    "</div>"
    ]
   },
   {
@@ -884,9 +890,34 @@
    "metadata": {},
    "source": [
     "### 문자열 관련 함수와 method\n",
+    "-----"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Method와 Function (함수)\n",
     "\n",
+    "<p> <font color=#00008B> &#9635 함수 (function) </font> - 특정 기능을 수행하기 위해 작성된 코드 블록</p>\n",
+    "<p> <font color=#00008B> &#9635 메서드 (method) </font> - 특정 클래스에 종속되어 그 클래스로 생성된 객체에서만 호출할 수 있는 함수</p>\n",
+    "\n",
+    "\n",
+    "\n",
+    "* Python에 내장된 많은 method와 function들은 다양한 기능을 제공한다.  \n",
+    "  * method와 function은 일부 다른 특징이 있지만, 근본적인 작동 원리는 비슷하다.\n",
+    "* ```lower()```와 ```upper()``` 등의 method는 dot(`.`)을 이용하며 특정 객체(object), 여기서는 특정 문자열(string)에 종속되어 있다고 한다.\n",
+    "* ```str()```, ```len()``` 등은 dot(`.`)을 이용하지 않으며, 이는 특정 객체에 종속되어 있지 않다. \n",
+    "   *  괄호 안에 인자로서 여러 형태의 데이터형이 올 수 있음\n",
+    "* 함수에 대해서는 나중에 자세히 다루도록 한다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### ```len()```  \n",
-    "  * python에 미리 만들어진 built-in 함수로 문자열이나 리스트의 길이를 구할 때 사용\n"
+    "  * python에 미리 만들어진 built-in 함수로 문자열이나 리스트의 길이를 구할 때 사용"
    ]
   },
   {
@@ -914,11 +945,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* ```lower()```, ```upper()```\n",
-    "  * 소문자 혹은 대문자로 바꾸어주는 method\n",
-    "  * 문자열 뒤에 마침표(.)와 함께 사용\n",
+    "#### ```lower()```, ```upper()```\n",
+    "* 소문자 혹은 대문자로 바꾸어주는 method\n",
+    "* 문자열 뒤에 마침표(.)와 함께 사용\n",
     "    * ```lower()```, ```upper()``` 등은 생성한 문자열에 종속된 method로써 python에서 제공함\n",
-    "  * 변수에 저장된 문자열과 따옴표로 표현된 문자열 모두에 method를 적용할 수 있다."
+    "* 변수에 저장된 문자열과 따옴표로 표현된 문자열 모두에 method를 적용할 수 있다."
    ]
   },
   {
@@ -1042,22 +1073,6 @@
    ],
    "source": [
     "this_year_string + this_year_string"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Method와 Function(함수)\n",
-    "\n",
-    "* Python에 내장된 많은 method와 function들은 다양한 기능을 제공한다.  \n",
-    "  * method와 function은 일부 다른 특징이 있지만, 근본적인 작동 원리는 비슷하다.\n",
-    "* ```lower()```와 ```upper()``` 등의 method는 dot(.)을 이용하며 특정 객체(object), 여기서는 특정 문자열(string)에 종속되어 있다고 한다.\n",
-    "\n",
-    "* ```str()```, ```len()``` 등은 dot(.)을 이용하지 않으며, 이는 특정 객체에 종속되어 있지 않음을 의미힌다. \n",
-    " *  괄호 안에 인자로서 여러 형태의 데이터형이 올 수 있음\n",
-    " \n",
-    "* 함수에 대해서는 나중에 자세히 다루도록 한다."
    ]
   },
   {
@@ -1249,8 +1264,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "tags": [],
-    "toc-hr-collapsed": true
+    "tags": []
    },
    "source": [
     "## 문자열을 이용한 입출력\n",
@@ -1261,11 +1275,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### %s를 이용한 문자열 출력\n",
+    "### `%s`를 이용한 문자열 출력\n",
     "\n",
     "아래는 C 스타일 형식의 문자열 출력 방식이다.\n",
     "\n",
-    "문자열은 %s, 정수는 %d, 실수는 %f에 대응되며, 실수는 출력할 소수점 개수를 명시할 수 있다."
+    "문자열은 `%s`, 정수는 `%d`, 실수는 `%f`에 대응되며, 실수는 출력할 소수점 개수를 명시할 수 있다."
    ]
   },
   {
@@ -1354,11 +1368,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### f-문자열을 이용한 출력 방법\n",
+    "### `f`-문자열을 이용한 출력 방법\n",
     "\n",
-    "파이썬 3.6부터 도입된 방법으로 문자열 앞에 f로 시작하며, 위에서 사용했던 % 대신, { }를 사용한다. \n",
+    "파이썬 3.6부터 도입된 방법으로 문자열 앞에 `f`로 시작하며, 위에서 사용했던 `%` 대신, `{ }`를 사용한다. \n",
     "\n",
-    "{ }안에 변수명을 넣어준다."
+    "`{ }`안에 변수명을 넣어준다."
    ]
   },
   {
