--- a/06.Python_Function.ipynb
+++ b/06.Python_Function.ipynb
@@ -19,11 +19,9 @@
     "\n",
     "* 함수는 하나의 관련 작업을 수행하는 데 사용되는 재사용 가능한 코드 블록이다.\n",
     "  * 함수는 응용 프로그램의 모듈성을 높이고 코드 재사용 수준을 높인다.\n",
-    "\n",
     "* Python은 기본적으로 많은 내장 함수를 제공한다.\n",
     "* 문자열 등을 다루면서 함수를 사용한 경험을 상기해 보자.\n",
     "  * ```len(\"Python programming\")```\n",
-    "\n",
     "* 필요에 따라 함수를 생성하여 원하는 기능을 따로 분리하여 사용하는 법을 익혀보자.\n",
     "  * Python에서 제공하는 함수 뿐만 아니라 사용자 정의의 새로운 함수를 만드는 법.\n",
     "  * Decomposition and abstraction"
@@ -53,9 +51,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 예제\n",
-    "\n",
-    "#### 제곱 후 1을 더해서 반환하는 함수"
+    "<p> <font color=#00008B> &#9635 반환 (return) </font> - 함수가 해야할 일을 모두 마치고 최종적인 값을 전달하여, 그 결과를 프로그램의 다른 곳에서 활용할 수 있도록 하는 것 </p>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<p> &#9635 예제: 제곱 후 1을 더해서 반환하는 함수 </p>"
    ]
   },
   {
@@ -83,8 +86,14 @@
     " * 함수는 인자(argument)를 입력 받아 ```x```라는 매개 변수(parameter)에 대입 \n",
     " * ```x**2 + 1``` 의 계산을 수행한 후 \n",
     " * 결과를 ```ans```에 대입하여 반환(return)하고 있음\n",
-    "\n",
-    " * 함수의 정의가 완료되었으면 이 함수를 이용하여 계산을 할 수 있다.\n",
+    "   * `return`을 수행하면 함수는 자동적으로 종료된다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "함수의 정의되면, 정의된 함수를 호출하여 계산을 할 수 있다.\n",
     "   * ```square_plus_one(10)``` 등을 수행해 보자.\n",
     "   * 10이라는 인자를 입력 받아 ```x```라는 매개 변수에 대입하여 계산을 수행한 후 결과를 전달한다."
    ]
@@ -113,7 +122,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 제곱근 반환 함수"
+    "<p> &#9635 예제: 제곱근 반환 함수 </p>"
    ]
   },
   {
@@ -139,9 +148,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 함수 사용하기\n",
+    "### 함수 호출하기\n",
     "\n",
-    "* 함수를 정의하였으면 이를 활용할 수 있음"
+    "함수를 정의하였으면 이를 호출하여 활용할 수 있음"
    ]
   },
   {
@@ -1077,8 +1086,11 @@
    "source": [
     "### ```lambda```\n",
     "\n",
-    "```lambda```는 비교적 간단한 함수를 생성할 때 사용하는 키워드로 ```def```와 비슷한 역할을 한다.  \n",
-    "* ```lambda arguments: expression```"
+    "```lambda```는 비교적 간단한 함수를 생성할 때 사용하는 키워드로 ```def```와 비슷한 역할을 한다. \n",
+    "\n",
+    "문법은 다음과 같다.\n",
+    "\n",
+    "```lambda arguments: expression```"
    ]
   },
   {
@@ -1159,17 +1171,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "여기서 바로 활용해 보지는 않지만, 함수를 인자로 전달하는 경우 자주 활용된다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Module\n",
+    "\n",
+    "<p> <font color=#00008B> &#9635 모듈 </font> - 모듈은 비슷한 역할을 담당하는 코드들을 모아 놓은 추가적인 파이썬 파일로, 현재 프로그램으로 import하여 사용할 수 있다.</p>\n",
     "\n",
     "* 기본적으로 제공하는 Built-in function 외에도 module을 통하여 다양한 함수 제공\n",
     "\n",
     "* 예\n",
     "  * math 모듈\n",
-    "   * 기본적인 수학 연산을 도와주는 모듈\n",
-    "   * https://docs.python.org/3/library/math.html\n",
+    "    * 기본적인 수학 연산을 도와주는 모듈\n",
+    "    * https://docs.python.org/3/library/math.html\n",
     "  * random 모듈\n",
-    "   * 다양한 분포에 대한 random number를 활용할 수 있게 해주는 모듈\n",
-    "   * https://docs.python.org/3/library/random.html\n",
+    "    * 다양한 분포에 대한 random number를 활용할 수 있게 해주는 모듈\n",
+    "    * https://docs.python.org/3/library/random.html\n",
     "\n",
     "* `import` 명령을 사용하여 모듈을 불러와 사용"
    ]
@@ -1178,7 +1199,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Math module\n",
+    "### [Math module](https://docs.python.org/3/library/math.html)\n",
     "\n",
     "* ```import math```\n",
     "* ```math.sqrt(x)```\n",
@@ -1317,7 +1338,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Random module\n",
+    "### [Random module](https://docs.python.org/3/library/random.html)\n",
     "\n",
     "* ```import random```\n",
     "* ```random.random()```\n",
@@ -1415,7 +1436,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 예제 : 랜덤 숫자를 맞추는 프로그램\n",
+    "<p> &#9635 예제 : 랜덤 숫자를 맞추는 프로그램 </p>\n",
     "\n",
     "1부터 100까지의 숫자를 랜덤으로 생성 후 키보드 입력을 통해 그 숫자를 맞추는 프로그램"
    ]
@@ -1673,7 +1694,7 @@
    "source": [
     "### 모듈에 대한 여러 가지\n",
     "\n",
-    "* 파이썬 스크립트 파일로 모듈을 만들 수 있음\n",
+    "* 파이썬 스크립트 파일로 개인적으로 모듈을 만들어 사용할 수 있다.\n",
     "  * 기본 작업 directory에 저장하여 import 할 수 있음  \n",
     "  * ```import fibo```\n",
     "* 모듈 변경과 갱신\n",
