--- a/02.Python_Basic.ipynb
+++ b/02.Python_Basic.ipynb
@@ -629,10 +629,9 @@
    "metadata": {},
    "source": [
     "### 변수와 객체\n",
-    "* Python에 존재하는 거의 모든 것들은 객체(object)라는 형태로 존재한다.\n",
+    "\n",
+    "* Python에 존재하는 거의 모든 것들은 객체 (object)라는 형태로 존재한다.\n",
     "  * 숫자, 문자열, 리스트, dictionary 등이 있으며, 이 과목을 통해 자세히 살펴볼 것이다.\n",
-    "  \n",
-    "  \n",
     "* 변수는 이러한 객체들에 이름을 붙여, 추후에 참조하여 더 복잡한 연산에 사용할 수 있도록 하는 역할을 한다.\n",
     "  * 객체는 데이터의 실질적인 존재, 변수 혹은 변수명은 그 존재를 지칭하는 이름이라고 생각하자."
    ]
@@ -652,36 +651,28 @@
     "\n",
     "* Python 변수명은 문자나 _로 시작\n",
     "  * ```_the_string```\n",
-    "  * ```my_variable```\n",
-    "  \n",
-    "  \n",
+    "  * ```my_variable```  \n",
     "* 첫 글자가 아닌 나머지 부분은 문자, 숫자, `_`가 올 수 있음\n",
     "  * ```password1```\n",
     "  * ```n00b```\n",
     "  * ```un_der_score```\n",
-    "  \n",
-    "  \n",
-    "* 대소문자 구별 : ```X```와 ```x```는 서로 다른 변수\n",
-    "\n",
-    "\n",
-    "\n",
-    "* 변수명을 짓는 방법\n",
+    "* 대소문자 구별 : ```X```와 ```x```는 서로 다른 변수"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "변수명을 짓는 방법\n",
     "\n",
     " * 알아보기 쉽게 짓는다.  \n",
-    " \n",
-    "   * ```interestrate``` -> ```interest_rate```   \n",
-    "   \n",
-    "     * 소문자와 밑줄을 이용한 이런 표기법을 snake case라고 한다.   \n",
-    "     \n",
-    "   * 반면 (나중에 공부할) 클래스의 이름은 PerfectTool과 같이 각 단어의 첫 글자를 대문자로 하는 것이 보통이다.    \n",
-    "     \n",
+    "   * ```interestrate``` -> ```interest_rate```      \n",
+    "     * 소문자와 밑줄을 이용한 이런 표기법을 snake case라고 한다.        \n",
+    "   * 반면 (나중에 공부할) 클래스의 이름은 PerfectTool과 같이 각 단어의 첫 글자를 대문자로 하는 것이 보통이다.         \n",
     "     * Pascal case 혹은 camel case라고 한다.\n",
-    "     \n",
-    " * 무슨 변수를 나타내는지 이해할 수 있도록 짓는다.  \n",
-    "   \n",
+    " * 무슨 변수를 나타내는지 이해할 수 있도록 짓는다.     \n",
     "   * ```abcdefg``` : 아무 의미 없어 보이며 이렇게 짓지 않음  \n",
-    "   \n",
-    "   * ```average_num_students``` : 변수명이 다소 긴 것처럼 느껴지지만, 학생 수의 평균을 의미하는 변수임을 추측할 수 있음\n"
+    "   * ```average_num_students``` : 변수명이 다소 긴 것처럼 느껴지지만, 학생 수의 평균을 의미하는 변수임을 추측할 수 있음"
    ]
   },
   {
@@ -811,7 +802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 1,
    "metadata": {
     "cell_style": "center"
    },
@@ -827,7 +818,7 @@
    ],
    "source": [
     "x, y = 2, 3   # x에는 2를 대입하고, y에는 3을 대입한다.\n",
-    "x, y = y, x\n",
+    "x, y = y, x   # x에는 기존 y의 값을, y에는 기존 x의 값을 대입.\n",
     "print('x = ', x)\n",
     "print('y = ', y)"
    ]
@@ -838,14 +829,14 @@
    "source": [
     "## 주석 (comment)\n",
     "\n",
-    "* 주석은 코드를 실행시켰을 때, 실행되지 않는 부분을 말하며\n",
-    "* 코드에 설명을 넣고 싶을 때 보통 이용한다.\n",
+    "<p> <font color=#00008B> &#9635 주석 </font> - 주석은 코드의 설명으로, 프로그램을 실행시켰을 때 실행되지 않는 부분이다.\n",
+    "    \n",
     "* 한 줄로 주석 넣기, #으로 시작\n",
     "  * ```# This code solves the P vs NP problem.```\n",
     "* 여러 줄에 걸쳐 주석을 넣을 때, ```\"\"\"```를 이용\n",
     "  * ```\n",
     "    \"\"\"  \n",
-    "    Turing used this code to crack the Enigma.  \n",
+    "    Turing used this code to crack Enigma.  \n",
     "    With this code, anybody can hack a server like a pro.  \n",
     "    \"\"\"\n",
     "    ```"
