--- a/08.Linear_algebra.ipynb
+++ b/08.Linear_algebra.ipynb
@@ -353,24 +353,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* 단, Python 2.x의 경우 위의 나누기에 실수 나누기를 적용하기 위해서는 파일 위쪽에 다음을 표기  \n",
-    "  * Python 3.x는 실수 나누기가 적용되기 때문에 상관 없음"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from __future__ import division"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### dot product\n",
+    "### 내적 (Dot product)\n",
+    "\n",
+    "두 벡터 $ a= [a_1, a_2, \\cdots, a_n]$, $ b= [b_1, b_2, \\cdots, b_n]$에 대해\n",
+    "\n",
+    "$$ a \\cdot b =\\sum_{i=1}^n a_i b_i = a_1 b_1 + a_2 b_2 + \\cdots + a_n b_n. $$\n",
     "\n",
     "* 목표 : \n",
     "  * dot( [1, 2, 3], [0, 1, 2]) = sum([1 \\* 0, 2 \\* 1, 3 \\* 2]) = sum([0, 2, 6]) = 8"
@@ -546,17 +533,19 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
-    "## [`NumPy`](https://numpy.org/)\n",
+    "## [NumPy](https://numpy.org/)\n",
     "\n",
     "--------------------------\n",
-    "파이썬의 패키지 ```NumPy```는 선형 대수에 필요한 모든 기능들을 갖추고 있다.\n",
+    "파이썬의 패키지 ```numpy```는 선형 대수에 필요한 모든 기능들을 갖추고 있다.\n",
     "\n",
     "\n",
-    "* NumPy는 Python에서의 수학/과학 컴퓨팅의 기본 패키지로서\n",
-    "* numpy 모듈에는 지금까지 행한 벡터 연산들이 구현되어 있음.\n",
-    "* numpy 패키지 (모듈)는 Python을 사용하는 거의 모든 수치 계산에 사용된다.\n",
+    "* `numpy`는 Python에서의 수학/과학 컴퓨팅의 기본 패키지로서\n",
+    "* `numpy` 모듈에는 지금까지 행한 벡터 연산들이 구현되어 있음.\n",
+    "* `numpy` 패키지 (모듈)는 Python을 사용하는 거의 모든 수치 계산에 사용된다.\n",
     "* Python을 위한 벡터, 행렬 및 고차원 데이터 구조를 제공한다.\n",
     " "
    ]
@@ -566,7 +555,7 @@
    "metadata": {},
    "source": [
     "```numpy``` 모듈을 이용하기 위해서는 다음과 같이 ```import```를 먼저 진행한다. 시작 시 한 번만 불러오면 된다.  \n",
-    "이 경우에는 Numpy 패키지에서 정의된 함수나 상수들을 사용할 때, ```np.```을 붙여야 한다.  "
+    "이 경우에는 NumPy 패키지에서 정의된 함수나 상수들을 사용할 때, ```np.```을 붙여야 한다.  "
    ]
   },
   {
@@ -610,16 +599,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Numpy ```ndarray```\n",
+    "### NumPy ```ndarray```\n",
     "* numpy의 다양한 기능은 `ndarray`라는 데이터구조를 바탕으로 이루어진다.\n",
     "  * 효율적이고 계산이 편리함  \n",
-    "\n",
     "* numpy array는 다양한 방법을 통해 만들 수 있다.\n",
     "  * 파이썬 리스트 또는 튜플을 이용하는 방법\n",
     "  * ```arange```, ```linspace``` 등과 같이 numpy 배열을 생성하는 데 사용되는 함수를 사용하는 방법\n",
     "  * 파일에서 데이터를 읽어들이는 방법\n",
-    "* 다차원 배열을 구현\n",
-    "* 수학적 계산에 특화"
+    "* 다차원 배열을 구현하고 수학적 계산에 특화되어 있다."
    ]
   },
   {
@@ -631,30 +618,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0, 1, 2, 3])"
+       "array([1, 2, 3])"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "import numpy as np  # 이미 한 번 import하였으면 다시 하지 않아도 된다.\n",
-    "a = np.array([0, 1, 2, 3])\n",
-    "\n",
+    "a = np.array([1, 2, 3])\n",
     "a"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"https://numpy.org/doc/stable/_images/np_array.png\" width=800>"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -663,7 +656,7 @@
        "numpy.ndarray"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -674,14 +667,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0 1 2 3]\n"
+      "[1 2 3]\n"
      ]
     }
    ],
@@ -702,7 +695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -711,7 +704,7 @@
        "1"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -722,42 +715,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(4,)"
+       "(3,)"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "a.shape  # 형태 : (4,)"
+    "a.shape  # 형태 : (3,)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "4"
+       "3"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "len(a)  # 4"
+    "len(a)  # 3"
    ]
   },
   {
@@ -1505,9 +1498,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Basic Slicing and Indexing\n",
+    "### Indexing and slicing\n",
     "\n",
-    "* Python list와 비슷하게 [ ]를 이용하여 원소에 접근한다.\n",
+    "* Python list와 비슷하게 `[ ]`를 이용하여 원소에 접근한다.\n",
     "* slicing 또한 Python list와 마찬가지로 ```start:stop:step```를 이용한다."
    ]
   },
@@ -2985,7 +2978,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "벡터 합과 차 :"
+    "<p> <font color=#00008B> &#9635 벡터의 합과 차 </font> - elementwise 방식으로 이루어진다. </p>"
    ]
   },
   {
@@ -3004,7 +2997,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "스칼라 곱 :"
+    "<p> <font color=#00008B> &#9635  스칼라 곱 </font> - 스칼라 값인 4가 <code>a</code>의 모든 원소에 곱해진다. 이를 broadcasting이라 한다."
    ]
   },
   {
@@ -3031,7 +3024,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "제곱합 :"
+    "<p> <font color=#00008B> &#9635 제곱합 </font> - 제곱이 broadcasting으로 적용된 후, <code>np.sum</code>로 합산. </p>"
    ]
   },
   {
@@ -3058,7 +3051,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "dot product :"
+    "<p> <font color=#00008B> &#9635 dot product </font> </p>"
    ]
   },
   {
@@ -3105,7 +3098,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "벡터 사이의 거리 : "
+    "<p> <font color=#00008B> &#9635 벡터 사이의 거리 </font> </p>"
    ]
   },
   {
@@ -3134,7 +3127,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "벡터 원소별 곱셈 :"
+    "<p> <font color=#00008B> &#9635 벡터 원소별 곱셈 </font> </p>"
    ]
   },
   {
@@ -3161,7 +3154,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "transpose : Reshape과 마찬가지로, transpose 또한 새로운 행렬을 생성하는 것이 아니다."
+    "<p> <font color=#00008B> &#9635 Transpose </font> - Reshape과 마찬가지로, transpose 또한 새로운 행렬을 생성하는 것이 아니라 view를 제공한다. </p>"
    ]
   },
   {
@@ -3212,7 +3205,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "행렬식 : "
+    "<p> <font color=#00008B> &#9635 행렬식 </font></p>"
    ]
   },
   {
@@ -3239,7 +3232,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "역행렬 : "
+    "<p> <font color=#00008B> &#9635 역행렬 </font></p>"
    ]
   },
   {
@@ -3267,7 +3260,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "해 찾기 : "
+    "<p> <font color=#00008B> &#9635 해 찾기 </font> - 연립방정식의 해를 찾는다.</p> "
    ]
   },
   {
@@ -3307,7 +3300,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "행렬곱 : "
+    "<p> <font color=#00008B> &#9635 행렬 간의 곱 </font> </p> "
    ]
   },
   {
@@ -3503,7 +3496,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "행렬의 원소별 곱셈"
+    "<p> <font color=#00008B> &#9635 행렬의 원소별 곱셈</font> </p>  "
    ]
   },
   {
@@ -3535,7 +3528,7 @@
     "\n",
     "numpy에서 제공하는 많은 함수들이 array의 각각의 원소에 적용되는 element-wise 방식을 적용한다.\n",
     "\n",
-    "아래에 그러한 함수 혹은 이항연산자들의 예를 나열하였다. 사용할 때는 ```np.```을 붙여 사용한다.\n",
+    "아래에 그러한 함수 혹은 이항연산자들의 예를 나열하였다. 함수를 사용할 때는 ```np.```을 붙여 사용한다.\n",
     "\n",
     "* ```abs```, ```sqrt```, ```exp```, ```log```, ```sign```, ```ceil```, ```floor```, ```rint```, ```cos```, ```sin```, ```tan```, ```isnan```, ```isinf```  \n",
     "* ```+```, ```-```, ```*```, ```/```, ```**```, ```<```, ```<=```, ```>```, ```>=```, ```==```, ```!=```, ```&```, ```|```"
@@ -3607,9 +3600,9 @@
    "source": [
     "### Concatenation\n",
     "\n",
-    "```r_``` : 객체를 첫 번째 축을 따라 연결되도록 변환\n",
+    "```r_``` : 객체를 첫 번째 축을 따라 연결되도록 변환 (행 방향)\n",
     "\n",
-    "```c_``` : 객체를 두 번째 축을 따라 연결되도록 변환"
+    "```c_``` : 객체를 두 번째 축을 따라 연결되도록 변환 (열 방향)"
    ]
   },
   {
@@ -3723,5 +3716,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 4
 }
