--- a/09.Visualizing_Data.ipynb
+++ b/09.Visualizing_Data.ipynb
@@ -719,7 +719,8 @@
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {
-    "scrolled": true
+    "scrolled": true,
+    "tags": []
    },
    "outputs": [
     {
