--- a/12.Probability.ipynb
+++ b/12.Probability.ipynb
@@ -541,10 +541,8 @@
     "### 중심 극한 정리\n",
     "\n",
     "* 같은 분포를 지니는 독립 확률 변수들의 합 혹은 평균은 정규 분포와 가까워 진다.\n",
-    "* $X_1, \\cdots, X_n$ 을 평균 $\\mu$, 표준 편차 $\\sigma$를 가질 때, $n$이 충분히 크면\n",
-    "$$\\frac{ X_1 + \\cdots + X_n - n\\mu}{\\sigma \\sqrt{n}}$$\n",
-    "\n",
-    "이 평균 0, 표준편차 1인 정규 분포에 근사함."
+    "* $X_1, \\cdots, X_n$ 을 평균 $\\mu$, 표준 편차 $\\sigma$를 가질 때, $n$이 충분히 크면, 다음은 평균 0, 표준편차 1인 정규 분포에 근사함.\n",
+    "$$\\frac{ X_1 + \\cdots + X_n - n\\mu}{\\sigma \\sqrt{n}}$$\n"
    ]
   },
   {
