--- a/06.Python_Function.ipynb
+++ b/06.Python_Function.ipynb
@@ -24,7 +24,12 @@
     "  * ```len(\"Python programming\")```\n",
     "* 필요에 따라 함수를 생성하여 원하는 기능을 따로 분리하여 사용하는 법을 익혀보자.\n",
     "  * Python에서 제공하는 함수 뿐만 아니라 사용자 정의의 새로운 함수를 만드는 법.\n",
-    "  * Decomposition and abstraction"
+    "\n",
+    "<p> <font color=#00008B> &#9635 Decomposition </font> - \n",
+    "복잡한 문제나 시스템을 더 작고 관리하기 쉬운 부분이나 하위 작업으로 나누는 것을 말하며, 문제 해결 프로세스를 단순화하고 더 체계적으로 만들 수 있다. </p>\n",
+    "\n",
+    "<p> <font color=#00008B> &#9635 Abstraction </font> - \n",
+    " 작업 수행 방법에 대한 정확한 세부 정보를 직접 보여 주기보다는 특정 기능을 수행하도록 이미 정의된 함수를 사용하게 하고, 이를 통해 함수를 블랙 박스처럼 취급할 수 있으며 기본 구현에 대해 걱정할 필요 없이 쉽게 사용하고 재사용할 수 있게 한다."
    ]
   },
   {
@@ -39,7 +44,7 @@
     "\n",
     "* 모든 함수 내의 코드 블록은 콜론(```:```)으로 시작되고 들여쓰기를 하여야 한다.\n",
     "\n",
-    "* ```return [expression]``` 명령문은 함수를 종료하고 호출자에게 결과를 전달한다. \n",
+    "* ```return expression``` 명령문은 함수를 종료하고 호출자에게 결과를 전달한다. \n",
     "\n",
     "```\n",
     "def function_name(< argument >):   \n",
@@ -236,7 +241,8 @@
     "* ```return```의 궁극적인 목적은 함수의 계산 결과를 반환하여 이차적으로 활용할 수 있도록 하는 것이고,   \n",
     "* ```print```는 단순히 화면에 출력하여 프로그래머가 눈으로 값을 확인할 수 있게 한다. \n",
     "  * 함수 내에서 사용되는 ```print```는 함수 본체 중의 일부일 뿐이다.\n",
-    "* 다음 두 함수를 비교해 보자."
+    "  \n",
+    "다음 두 함수를 비교해 보자."
    ]
   },
   {
@@ -407,12 +413,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* 인자가 필요하지만 함수 호출 시 입력하지 않았을 경우 에러가 발생한다."
+    "<div class=\"alert alert-block alert-danger\">  \n",
+    "<b>에러:</b> \n",
+    "    인자가 필요하지만 함수 호출 시 입력하지 않았을 경우 에러가 발생한다.\n",
+    "</div>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -422,7 +431,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Input \u001b[1;32mIn [15]\u001b[0m, in \u001b[0;36m<cell line: 5>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      2\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mInput is :\u001b[39m\u001b[38;5;124m\"\u001b[39m, stri)\n\u001b[0;32m      3\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m\n\u001b[1;32m----> 5\u001b[0m \u001b[43mprintme\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Input \u001b[1;32mIn [1]\u001b[0m, in \u001b[0;36m<cell line: 5>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      2\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mInput is :\u001b[39m\u001b[38;5;124m\"\u001b[39m, stri)\n\u001b[0;32m      3\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m\n\u001b[1;32m----> 5\u001b[0m \u001b[43mprintme\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
       "\u001b[1;31mTypeError\u001b[0m: printme() missing 1 required positional argument: 'stri'"
      ]
     }
@@ -432,7 +441,7 @@
     "    print(\"Input is :\", stri)\n",
     "    return\n",
     "\n",
-    "printme()"
+    "printme() # 인자를 입력하지 않았음"
    ]
   },
   {
@@ -627,10 +636,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### default parameter\n",
+    "### Default parameter\n",
     "\n",
     "* 함수 생성 시 다음과 같이 default parameter를 설정할 수 있다.\n",
-    "* default parameter는 입력값이 따로 없을 때, 미리 설정된 default값을 이용한다."
+    "* default parameter는 입력값이 따로 없을 때, 함수 정의 단계에서 `=`를 통해 미리 설정된 default값을 이용한다."
    ]
   },
   {
@@ -679,7 +688,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def printinfo( name, age = 35 ):\n",
+    "def printinfo(name, age = 35):  # age = 35로 default 설정 되어 있음\n",
     "    print(\"Name: \", name)\n",
     "    print(\"Age: \", age)\n",
     "    return"
@@ -702,8 +711,8 @@
     }
    ],
    "source": [
-    "printinfo( age=50, name=\"miki\" )\n",
-    "printinfo( name=\"miki\" )"
+    "printinfo(age=50, name=\"miki\")\n",
+    "printinfo(name=\"miki\" )    # age = 35의 default 값을 이용"
    ]
   },
   {
@@ -738,9 +747,9 @@
    ],
    "source": [
     "def my_func():\n",
-    "    x = 20\n",
+    "    x = 20     # 지역 변수 x\n",
     "    \n",
-    "x = 10\n",
+    "x = 10         # 전역 변수 x\n",
     "my_func()\n",
     "print(x)"
    ]
@@ -749,7 +758,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* 함수 내의 지역 변수와 함수 바깥의 전역 변수(global variable)이 분리되어 있음을 주의"
+    "<div class=\"alert alert-block alert-warning\"> \n",
+    "    <b>주의:</b>  함수 내의 지역 변수와 함수 바깥의 전역 변수(global variable)는 서로 다른 것이다. </div>"
    ]
   },
   {
@@ -824,7 +834,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "###  변수  scope 더 살펴보기\n",
+    "###  변수 scope 더 살펴보기\n",
     "\n",
     "변수의 scope는 해당 변수가 파이썬 인터프리터에게 보이거나 액세스 가능한 범위를 나타낸다.\n",
     "\n",
@@ -880,6 +890,39 @@
     "    print(x)\n",
     "    \n",
     "print_x()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Python은 어디서 name definition이 발생하는지, 어디서 해당 이름이 참조되는지에 따라 scope를 결정한다.\n",
+    "\n",
+    "* local : 함수 내부에서 ```x```를 참조하는 경우 파이썬 인터프리터는 먼저 해당 함수에 로컬인 가장 안쪽 범위에서 ```x```를 탐색한다.\n",
+    "\n",
+    "* enclosing : ```x```가 로컬 범위에 없지만 다른 함수 내부에 있는 함수에 나타나면 파이썬 인터프리터는 바깥쪽 함수의 scope에서 탐색한다.\n",
+    "\n",
+    "* global : 위의 검색 중 어느 것에도 해당 변수가 정의되지 않았으면, 파이썬 인터프리터는 다음에 전역 범위를 찾는다.  \n",
+    "\n",
+    "* built-in : 위의 검색 중  ```x```를 찾을 수 없으면 인터프리터는 built-in scope에서 찾는다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# global scope\n",
+    "x = 0\n",
+    "def outer():\n",
+    "    # enclosing scope\n",
+    "    x = 1\n",
+    "    def inner():\n",
+    "        # local scope\n",
+    "        x = 2"
    ]
   },
   {
