--- a/08.Linear_algebra.ipynb
+++ b/08.Linear_algebra.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,18 +57,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* Python의 list는 벡터 연산을 제공하지 않기 때문에, 벡터 연산을 추가해 보자.\n",
+    "Python의 list는 벡터 연산을 제공하지 않기 때문에, 벡터 연산의 기능을 구현해 보자.\n",
     "\n",
     "### 벡터 합과 차\n",
     "\n",
-    "* 원소별로 계산 : 다음을 구현하고 싶음\n",
+    "원소별로 계산 : 다음을 구현하고 싶음\n",
     "  * [1, 2] 더하기 [3, 4] = [4, 6]\n",
     "  * [5, 3] 빼기 [1, 7] = [4, -4]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +88,7 @@
        "[4, 6]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +108,7 @@
        "[4, 6, 8]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -160,7 +160,7 @@
        "[-1, -2, -2]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -175,12 +175,12 @@
    "source": [
     "### 여러 개의 벡터들의 합\n",
     "\n",
-    "* 벡터들의 리스트가 있을 때, 리스트 내의 벡터들을 원소 별로 합하기"
+    "벡터들의 리스트가 있을 때, 리스트 내의 벡터들을 원소 별로 합하기"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -202,7 +202,7 @@
        "[3, 6, 1]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -216,8 +216,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<p> <font color=#00008B> &#9635 reduce </font> - 두 인자를 가지는 함수를 리스트의 왼쪽에서 오른쪽으로 누적 적용하여 리스트를 단일 값으로 줄이는 함수."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,7 +236,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# anonymous function을 이용하는 법\n",
+    "def vector_sum(vectors):\n",
+    "    return reduce(lambda v, w: [v_i + w_i for v_i, w_i in zip(v,w)], vectors)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -238,7 +258,7 @@
        "[3, 6, 1]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -253,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -262,7 +282,7 @@
        "[3, 6, 1]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -278,7 +298,7 @@
    "source": [
     "### 스칼라 곱\n",
     "\n",
-    "* 목표 : 3*[1, 2, 3] = [3, 6, 9]"
+    "목표 : 3*[1, 2, 3] = [3, 6, 9]"
    ]
   },
   {
@@ -315,7 +335,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* 컴포넌트별 평균 : ```vector_mean([1, 2], [2, 4], [3, 6]) == [2, 4]``` "
+    "컴포넌트별 평균 : ```vector_mean([1, 2], [2, 4], [3, 6]) == [2, 4]``` "
    ]
   },
   {
@@ -359,7 +379,7 @@
     "\n",
     "$$ a \\cdot b =\\sum_{i=1}^n a_i b_i = a_1 b_1 + a_2 b_2 + \\cdots + a_n b_n. $$\n",
     "\n",
-    "* 목표 : \n",
+    "목표 : \n",
     "  * dot( [1, 2, 3], [0, 1, 2]) = sum([1 \\* 0, 2 \\* 1, 3 \\* 2]) = sum([0, 2, 6]) = 8"
    ]
   },
@@ -400,7 +420,7 @@
    "source": [
     "### 제곱합\n",
     "\n",
-    "* 벡터 원소들의 제곱의 합"
+    "벡터 원소들의 제곱의 합"
    ]
   },
   {
@@ -438,7 +458,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* 벡터의 크기(magnitude) : 제곱합의 제곱근"
+    "벡터의 크기(magnitude) : 제곱합의 제곱근"
    ]
   },
   {
@@ -498,7 +518,7 @@
    "source": [
     "### 벡터 사이의 거리\n",
     "\n",
-    "* 한 벡터에서 다른 벡터를 뺀 후, 크기를 구하는 것과 동일"
+    "한 벡터에서 다른 벡터를 뺀 후, 크기를 구하는 것과 동일"
    ]
   },
   {
