--- a/04.Python_Conditional.ipynb
+++ b/04.Python_Conditional.ipynb
@@ -121,7 +121,7 @@
     "* ```else``` 문은 ```if``` 문에있는 조건식이 ```0``` 또는 ```False``` 값으로 해석될 때 실행되는 코드 블록을 포함함.\n",
     "\n",
     "\n",
-    "* ```if```문과 ```else```의 내용은 들여쓰기(indentation)를 해야 함.\n",
+    "* ```if```문과 ```else```의 내용은 들여쓰기 (indentation)를 해야 함.\n",
     "\n",
     "\n",
     "* 하나의 ```if```에 대응되는 ```else```는 한 개 혹은, 필요가 없을 경우 ```else``` 문은 생략 가능 \n"
@@ -131,7 +131,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=\"alert alert-block alert-info\"> <b>NOTE</b> 코드가 간단할 경우, 줄을 바꿔 들여쓰기를 하지 않고, 다음과 같은 문법도 가능 \n",
+    "<div class=\"alert alert-block alert-info\"> <b>NOTE: </b> 코드가 간단할 경우, 줄을 바꿔 들여쓰기를 하지 않고, 다음과 같은 문법도 가능 \n",
     "\n",
     "```\n",
     "if 조건문: 조건문 결과가 True일 경우 해야 할 일\n",
@@ -183,7 +183,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=\"alert alert-block alert-info\"> <b>NOTE</b> <code>else</code> 이후의 내용이 필요 없을 경우 <code>else</code>와 그 이하 부분은 생략 가능"
+    "<div class=\"alert alert-block alert-info\"> <b>NOTE:</b> <code>else</code> 이후의 내용이 필요 없을 경우 <code>else</code>와 그 이하 부분은 생략 가능"
    ]
   },
   {
@@ -225,7 +225,7 @@
    "source": [
     "#### 들여쓰기 - indentation\n",
     "* C/C++이나 JAVA와 같은 언어에서는 들여쓰기는 코드를 보기 좋게 만들기 위한 것일 뿐 필수적인 것은 아님\n",
-    "* Python에서는 들여쓰기가 문법의 일부이므로 반드시 지키도록 한다.\n",
+    "* Python에서는 들여쓰기가 문법의 일부이므로 **반드시 지키도록 한다**.\n",
     "* 따라서 다음은 바로 위의 코드와는 다르게 작동한다."
    ]
   },
@@ -293,32 +293,32 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div class=\"alert alert-block alert-danger\"> <b>Error</b> 조건문에서 두 값이 같은지 비교할 때는 <code>==</code> 를 이용해야 한다. 따라서 다음 코드는 에러가 발생한다. </div>"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (2587315559.py, line 2)",
+     "evalue": "invalid syntax (4055733405.py, line 2)",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;36m  Input \u001b[1;32mIn [9]\u001b[1;36m\u001b[0m\n\u001b[1;33m    if x = y:\u001b[0m\n\u001b[1;37m         ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+      "\u001b[1;36m  Input \u001b[1;32mIn [1]\u001b[1;36m\u001b[0m\n\u001b[1;33m    if x = y:  # 잘못된 문법\u001b[0m\n\u001b[1;37m         ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
    "source": [
     "x, y = 3, 3\n",
-    "if x = y:\n",
+    "if x = y:  # 잘못된 문법\n",
     "    print(\"x is equal to y.\")\n",
     "else:\n",
     "    print(\"x is different from y.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert alert-block alert-danger\"> <b>Error</b> 조건문에서 두 값이 같은지 비교할 때는 <code>==</code> 를 이용해야 한다. </div>"
    ]
   },
   {
