--- a/06.Python_Function.ipynb
+++ b/06.Python_Function.ipynb
@@ -421,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -431,7 +431,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Input \u001b[1;32mIn [1]\u001b[0m, in \u001b[0;36m<cell line: 5>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      2\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mInput is :\u001b[39m\u001b[38;5;124m\"\u001b[39m, stri)\n\u001b[0;32m      3\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m\n\u001b[1;32m----> 5\u001b[0m \u001b[43mprintme\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[1;32mIn[15], line 5\u001b[0m\n\u001b[0;32m      2\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mInput is :\u001b[39m\u001b[38;5;124m\"\u001b[39m, stri)\n\u001b[0;32m      3\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m\n\u001b[1;32m----> 5\u001b[0m \u001b[43mprintme\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m \u001b[38;5;66;03m# 인자를 입력하지 않았음\u001b[39;00m\n",
       "\u001b[1;31mTypeError\u001b[0m: printme() missing 1 required positional argument: 'stri'"
      ]
     }
@@ -909,20 +909,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 34,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n"
+     ]
+    }
+   ],
    "source": [
     "# global scope\n",
     "x = 0\n",
     "def outer():\n",
     "    # enclosing scope\n",
     "    x = 1\n",
+    "    print(x)\n",
     "    def inner():\n",
     "        # local scope\n",
-    "        x = 2"
+    "        x = 2\n",
+    "        print(x)\n",
+    "    inner()\n",
+    "\n",
+    "outer()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "# global scope\n",
+    "x = 0\n",
+    "def outer():\n",
+    "    # enclosing scope\n",
+    "    x = 1\n",
+    "    print(x)\n",
+    "    def inner():\n",
+    "        # local scope\n",
+    "        print(x)\n",
+    "    inner()\n",
+    "\n",
+    "outer()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# global scope\n",
+    "x = 0\n",
+    "def outer():\n",
+    "    # enclosing scope\n",
+    "    print(x)\n",
+    "    def inner():\n",
+    "        # local scope\n",
+    "        print(x)\n",
+    "    inner()\n",
+    "\n",
+    "outer()"
    ]
   },
   {
@@ -937,7 +1008,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -967,7 +1038,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -980,7 +1051,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -997,19 +1068,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(10, 10)\n"
-     ]
+     "data": {
+      "text/plain": [
+       "(10, 10)"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(farm(20, 60))"
+    "farm(20, 60)"
    ]
   },
   {
@@ -1024,7 +1098,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -1033,7 +1107,7 @@
        "(None, None)"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1067,23 +1141,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "Enter the number of heads :  7\n",
-      "Enther the number of legs :  18\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of pigs :  2\n",
-      "Number of chickens :  5\n"
+      "Enter the number of heads : 20\n",
+      "Enther the number of legs : 56\n",
+      "Number of pigs :  8\n",
+      "Number of chickens :  12\n"
      ]
     }
    ],
@@ -1138,7 +1206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1155,7 +1223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1164,7 +1232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -1173,7 +1241,7 @@
        "4"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1192,7 +1260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -1201,7 +1269,7 @@
        "4"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1257,7 +1325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -1266,7 +1334,7 @@
        "8.426149773176359"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1278,7 +1346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -1287,7 +1355,7 @@
        "1.0"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1298,7 +1366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -1307,7 +1375,7 @@
        "2.0"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1318,7 +1386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -1327,7 +1395,7 @@
        "0.0"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1338,7 +1406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -1347,7 +1415,7 @@
        "3.0"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1358,7 +1426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -1367,13 +1435,14 @@
        "0.6931471805599452"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# 실수 간의 나머지를 계산할 때는 주의하여야 한다.\n",
+    "# 수학적으로 0이어야 하나, floating error로 인하여 이상한 값이 나옴\n",
     "math.log(8) % math.log(2)"
    ]
   },
@@ -1396,16 +1465,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.5306616346508001"
+       "0.867547936032581"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1417,16 +1486,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "7.364816301962892"
+       "7.483071526766255"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1437,16 +1506,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "4"
+       "5"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1457,16 +1526,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "-0.4658854780176727"
+       "-0.4410633163254223"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1486,7 +1555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1511,104 +1580,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "Guess the number between 1 to 100 (type q to quit) :  50\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The number is larger than your guess, try again.\n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "Guess the number between 1 to 100 (type q to quit) :  75\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The number is smaller than your guess, try again.\n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "Guess the number between 1 to 100 (type q to quit) :  62\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The number is larger than your guess, try again.\n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "Guess the number between 1 to 100 (type q to quit) :  69\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The number is smaller than your guess, try again.\n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "Guess the number between 1 to 100 (type q to quit) :  65\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The number is larger than your guess, try again.\n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "Guess the number between 1 to 100 (type q to quit) :  67\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The number is larger than your guess, try again.\n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "Guess the number between 1 to 100 (type q to quit) :  68\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Guess the number between 1 to 100 (type q to quit) : 50\n",
+      "The number is larger than your guess, try again.\n",
+      "Guess the number between 1 to 100 (type q to quit) : 75\n",
+      "The number is larger than your guess, try again.\n",
+      "Guess the number between 1 to 100 (type q to quit) : 88\n",
+      "The number is smaller than your guess, try again.\n",
+      "Guess the number between 1 to 100 (type q to quit) : 81\n",
+      "The number is larger than your guess, try again.\n",
+      "Guess the number between 1 to 100 (type q to quit) : 84\n",
+      "The number is larger than your guess, try again.\n",
+      "Guess the number between 1 to 100 (type q to quit) : 86\n",
+      "The number is smaller than your guess, try again.\n",
+      "Guess the number between 1 to 100 (type q to quit) : 85\n",
       "Correct!\n"
      ]
     }
@@ -1623,12 +1614,12 @@
    "source": [
     "#### t – 랜덤 변수\n",
     "\n",
-    "* `gauss()` 함수와 `gammavariate()` 함수를 이용하여 t-분포를 따르는 랜덤 변수를 생성하는 함수"
+    "* `gauss()` 함수와 `gammavariate()` 함수를 이용하여 student t-분포를 따르는 랜덤 변수를 생성하는 함수"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1636,29 +1627,29 @@
     "import random\n",
     "\n",
     "def student_t(nu): # nu equals number of degrees of freedom\n",
-    "    x = random.gauss(0.0, 1.0)\n",
-    "    y = 2.0*random.gammavariate(0.5*nu, 2.0)\n",
-    "    return x / (math.sqrt(y/nu))"
+    "    z = random.gauss(0.0, 1.0)\n",
+    "    chi = random.gammavariate(0.5*nu, 2.0)\n",
+    "    return z / (math.sqrt(chi / nu))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "-0.9651852373336636"
+       "1.001301444857031"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "student_t(10)"
+    "student_t(2)"
    ]
   },
   {
@@ -1670,16 +1661,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "5"
+       "7"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1691,16 +1682,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "10"
+       "9"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from random import randint  \n",
+    "randint(1, 10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1712,16 +1724,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "5"
+       "2"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1748,7 +1760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 67,
    "metadata": {
     "tags": []
    },
@@ -1783,7 +1795,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.10.10"
   }
  },
  "nbformat": 4,
