--- a/11.Descriptive_Statistics.ipynb
+++ b/11.Descriptive_Statistics.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 11.Descriptive_Statistics\n",
+    "# 11.Descriptive Statistics\n",
     "---"
    ]
   },
@@ -223,11 +223,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Python2.x에서는 from __future__ import division가 필요하나 \n",
-    "# Python3.x에서는 필요없음\n",
-    "from __future__ import division\n",
     "def mean(x):\n",
-    "    return sum(x)/len(x)"
+    "    return sum(x) / len(x)"
    ]
   },
   {
@@ -1229,7 +1226,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.10.10"
   }
  },
  "nbformat": 4,
