--- a/03.Python_String.ipynb
+++ b/03.Python_String.ipynb
@@ -17,9 +17,9 @@
    },
    "source": [
     "\n",
-    "## 문자열 개요\n",
+    "## [문자열](https://docs.python.org/3/library/string.html) 개요\n",
     "\n",
-    "* 문자열은 문자들로 이루어진 단어나 문장 등을 의미한다.\n",
+    "<p> &#9635 <font color=#00008B> 문자열 (string) </font> - 문자들로 이루어진 단어나 문장 등을 의미한다.\n",
     "\n",
     "* 파이썬에서는 문자열(string)을 쉽게 다룰 수 있다.\n",
     "\n",
@@ -76,7 +76,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "다음은 숫자 45가 아니라 문자열로서 \"45\"로 사용되었음을 유의"
+    "다음은 숫자 45가 아니라 문자열로서 `\"45\"`로 사용되었음을 유의"
    ]
   },
   {
@@ -109,15 +109,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div class=\"alert alert-block alert-danger\">  \n",
-    "<b>에러:</b> 문자열은 다른 숫자들과의 사칙연산에 이용할 수 없다.\n",
-    "</div>"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
@@ -136,6 +127,38 @@
    ],
    "source": [
     "age + 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert alert-block alert-danger\">  \n",
+    "<b>에러:</b> 문자열은 다른 숫자들과의 사칙연산에 이용할 수 없다.\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "46"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 정수로 변환하여 사용\n",
+    "int(age) + 1"
    ]
   },
   {
@@ -449,7 +472,7 @@
    "source": [
     "### 연산자 오버로딩 (overloading)\n",
     "\n",
-    "<p> &#9635 연산자 오버로딩 - 같은 연산자가 적용되는 데이터 타입에 따라 다르게 작동하는 것 </p>\n",
+    "<p> &#9635 <font color=#00008B> 연산자 오버로딩 </font>- 같은 연산자가 적용되는 데이터 타입에 따라 다르게 작동하는 것 </p>\n",
     "\n",
     "* 더하기(+) 기호는 연산되는 변수의 타입에 따라 다르게 작동한다.\n",
     "  * ```3 + 4``` : 덧셈\n",
@@ -507,7 +530,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### type checking"
+    "### Type checking"
    ]
   },
   {
@@ -609,7 +632,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 확장 문자(escaping character)\n",
+    "### 확장 문자 (escaping character)\n",
     "\n",
     "문자열 중간에 따옴표 ' 기호를 넣고 싶을 때\n",
     "\n",
@@ -713,7 +736,7 @@
     "\n",
     "\n",
     "* 인덱스를 통하여 문자열의 특정 문자에 쉽게 접근할 수 있다.\n",
-    "* 첫 번째 문자의 인덱스는 0부터 시작함 (1이 아님)\n"
+    "* 파이썬에서 첫 번째 문자의 인덱스는 **0**부터 시작함 (1이 아님)\n"
    ]
   },
   {
@@ -897,7 +920,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Method와 Function (함수)\n",
+    "#### 함수와 메서드\n",
     "\n",
     "<p> <font color=#00008B> &#9635 함수 (function) </font> - 특정 기능을 수행하기 위해 작성된 코드 블록</p>\n",
     "<p> <font color=#00008B> &#9635 메서드 (method) </font> - 특정 클래스에 종속되어 그 클래스로 생성된 객체에서만 호출할 수 있는 함수</p>\n",
@@ -907,9 +930,8 @@
     "* Python에 내장된 많은 method와 function들은 다양한 기능을 제공한다.  \n",
     "  * method와 function은 일부 다른 특징이 있지만, 근본적인 작동 원리는 비슷하다.\n",
     "* ```lower()```와 ```upper()``` 등의 method는 dot(`.`)을 이용하며 특정 객체(object), 여기서는 특정 문자열(string)에 종속되어 있다고 한다.\n",
-    "* ```str()```, ```len()``` 등은 dot(`.`)을 이용하지 않으며, 이는 특정 객체에 종속되어 있지 않다. \n",
-    "   *  괄호 안에 인자로서 여러 형태의 데이터형이 올 수 있음\n",
-    "* 함수에 대해서는 나중에 자세히 다루도록 한다."
+    "* ```str()```, ```len()``` 등은 built-in function으로 dot(`.`)을 이용하지 않으며, 이는 특정 객체에 종속되어 있지 않다. \n",
+    "   *  괄호 안에 인자로서 여러 형태의 데이터형이 올 수 있음"
    ]
   },
   {
