--- a/07.Python_List_Dictionary.ipynb
+++ b/07.Python_List_Dictionary.ipynb
@@ -261,7 +261,7 @@
     }
    ],
    "source": [
-    "for i in squares: print(i)"
+    "for x in squares: print(x)"
    ]
   },
   {
@@ -3767,7 +3767,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.10.10"
   }
  },
  "nbformat": 4,
