--- a/08.Linear_algebra.ipynb
+++ b/08.Linear_algebra.ipynb
@@ -2288,6 +2288,103 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "2차원 행렬에서도 boolean index를 사용할 수 있다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 130,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([2, 4])"
+      ]
+     },
+     "execution_count": 130,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "B = np.array([[True, False],\n",
+    "           [False, True]])\n",
+    "M = np.array([[2, 3],\n",
+    "           [1, 4]])\n",
+    "M[B]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 131,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0, 3],\n",
+       "       [1, 0]])"
+      ]
+     },
+     "execution_count": 131,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "M[B] = 0\n",
+    "M"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 132,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[10,  3],\n",
+       "       [ 1, 20]])"
+      ]
+     },
+     "execution_count": 132,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "M[B] = 10, 20\n",
+    "M"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 133,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0, 0],\n",
+       "       [1, 0]])"
+      ]
+     },
+     "execution_count": 133,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "M[M>2] = 0    # all the elements > 2 are replaced by 0\n",
+    "M"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Boolean operation"
    ]
   },
@@ -3618,7 +3715,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Concatenation\n",
+    "### Concatenation, Stacking\n",
     "\n",
     "```r_``` : 객체를 첫 번째 축을 따라 연결되도록 변환 (행 방향)\n",
     "\n",
@@ -3714,6 +3811,184 @@
     "B = np.array([[5,6],[7,8]])\n",
     "np.c_[A, B]"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "다음의 함수들 또한 자주 이용된다.\n",
+    "\n",
+    "* ```hstack``` :  수평 방향   \n",
+    "* ```vstack``` :  수직 방형   \n",
+    "* ```column_stack``` :  컬럼들로 \n",
+    "\n",
+    "`c_`나 `r_`과 비슷하나 조금 다른 점들도 있기 때문에, 사용하기 전에 간단히 결과를 항상 체크해 보고 사용하자."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 2, 3, 4, 5, 6])"
+      ]
+     },
+     "execution_count": 87,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = np.array((1,2,3))\n",
+    "b = np.array((4,5,6))\n",
+    "np.hstack((a,b))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 4],\n",
+       "       [2, 5],\n",
+       "       [3, 6]])"
+      ]
+     },
+     "execution_count": 88,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = np.array([[1],[2],[3]])\n",
+    "b = np.array([[4],[5],[6]])\n",
+    "np.hstack((a,b))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 2, 3],\n",
+       "       [4, 5, 6]])"
+      ]
+     },
+     "execution_count": 89,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = np.array([1, 2, 3])\n",
+    "b = np.array([4, 5, 6])\n",
+    "np.vstack((a,b))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 2],\n",
+       "       [2, 3],\n",
+       "       [3, 4]])"
+      ]
+     },
+     "execution_count": 90,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = np.array((1,2,3))\n",
+    "b = np.array((2,3,4))\n",
+    "np.column_stack((a,b))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```concatenate```함수를 이용할 수도 있다. ```axis```를 조정하여 어떤 방향으로 쌓을지 정한다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 2],\n",
+       "       [3, 4],\n",
+       "       [5, 6]])"
+      ]
+     },
+     "execution_count": 84,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = np.array([[1, 2], [3, 4]])\n",
+    "b = np.array([[5, 6]])\n",
+    "np.concatenate((a, b), axis=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 2, 5],\n",
+       "       [3, 4, 6]])"
+      ]
+     },
+     "execution_count": 85,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.concatenate((a, b.T), axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 2, 3, 4, 5, 6])"
+      ]
+     },
+     "execution_count": 86,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.concatenate((a, b), axis=None)"
+   ]
   }
  ],
  "metadata": {
@@ -3732,7 +4007,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.10.10"
   }
  },
  "nbformat": 4,
